feat: todos 一覧を表示する view を用意

--- a/src/app/pds-cqs/views/todo-list-view/todo-list-view.component.html
+++ b/src/app/pds-cqs/views/todo-list-view/todo-list-view.component.html
@@ -1,1 +1,15 @@
-<p>todo-list-view works!</p>
+<ul>
+  <li *ngFor="let todo of todos">
+    <label>
+      <input
+        #checkbox
+        type="checkbox"
+        [checked]="todo.completed"
+        (change)="
+          changeCompleted.emit({ id: todo.id, completed: checkbox.checked })
+        "
+      />
+      {{ todo.title }}
+    </label>
+  </li>
+</ul>
